load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/signals2/*.hpp",
]

cc_library(
    name = "signals2_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
    deps = [
        "@boost//iterator",
    ],
)

cc_library(
    name = "signals2",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        ":signals2_internal",
        "@boost//optional",
        "@boost//function",
        "@boost//smart_ptr",
        "@boost//variant",
        "@boost//mpl",
        "@boost//parameter",
        "@boost//predef",
    ],
)
